--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
+Brotli==1.1.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==2.0.12
+cssselect2==0.8.0
+fonttools==4.57.0
+html5lib==1.1
+idna==3.10
+joblib==1.4.2
+Markdown==3.8
+markdown-it-py==3.0.0
+markdown-katex==202406.1035
+mdformat==0.7.22
+mdurl==0.1.2
+ordered-set==4.1.0
+pillow==11.2.1
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
 requests==2.26.0
-weasyprint==53.0
+setuptools==78.1.0
+six==1.17.0
+tinycss2==1.4.0
+urllib3==1.26.20
+webencodings==0.5.1
+zopfli==0.2.3.post1
